<resources>
    <string name="app_name">行为记录与分析APP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="error_invalid_email">邮箱错误！</string>
    <string name="error_invalid_password">密码格式错误！</string>
    <string name="error_incorrect_password">密码错误！</string>
    <string name="error_field_required">用户名不能为空！</string>
    <string name="permission_rationale">"邮箱不存在！"</string>
    <string name="mregister">注册</string>
    <string name="prompt_telephone">电话号码</string>
    <string name="title_activity_login_after">LoginAfterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">用户名</string>
    <string name="nav_header_id">用户编号:</string>
    <string name="beacon_sn_text">设备序号:</string>
    <string name="beacon_id_text">位置编号:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">设置</string>
    <string name="beacon_jingdu">经度:</string>
    <string name="beacon_weidu">纬度:</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ask_bt_open">请确认蓝牙是否已打开？</string>
    <!-- Strings related to Register -->
    <string name="user_info_email">电子邮箱</string>
    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">记录时间</string>
    <string name="title_dashboard">统计时间</string>
    <string name="title_notifications">分析时间</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_user_info">个人信息</string>

</resources>
