<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:hint="@string/nav_header_title"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:hint="@string/user_info_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/telephoneInput"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:hint="@string/prompt_telephone"
                android:inputType="number|phone"
                android:padding="10dp"
                android:singleLine="true" />

            <!-- Login Button -->

            <Button
                android:id="@+id/registerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"

                android:text="@string/mregister" />

            <!-- Link to Login Screen -->

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>